[Phonebook][fix] fixed button visibility safari ios

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+button {
+  -webkit-appearance: none;
+}
 h1,
 h2 {
   text-align: center;
